--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/app.ts",
   "scripts": {
     "dev": "NODE_ENV=development nodemon --watch 'src/**/*' -e ts  --exec 'ts-node' ./src/app.ts",
-    "build": "NODE_ENV=production tsc",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
